# shootingProject

./: .gitignore  CMakeLists.txt
Classes/: AppDelegate.cpp
Classes/CricketJni/: CricketJni.cpp  CricketJni.h
Classes/Input/: OprtKey.cpp  OprtKey.h  OprtState.cpp  OprtState.h  OprtTouch.cpp  OprtTouch.h  UseKey.h
Classes/Manager/: AnimManager.cpp  AnimManager.h  AudioManager.cpp  AudioManager.h  EffManager.cpp  EffManager.h  ResourceManager.cpp  ResourceManager.h
Classes/Map/: MapMaker.cpp  MapMaker.h
Classes/Module/: ActModule.cpp  ActSet.h  AnimUpdate.cpp  DamageCheck.cpp  DamageCheck.h  DirCheck.cpp  Fall.cpp  HitCheck.cpp  HitCheck.h  Jump.cpp  Move.cpp  Move.h  OldKeyUpdate.cpp  OldKeyUpdate.h  SetPos.cpp  Shooting.cpp  Shooting.h  changeChara.cpp  changeChara.h
Classes/Scene/: GameScene.cpp  GameScene.h  TitleScene.cpp  TitleScene.h
Classes/UIClass/: Number.cpp  Number.h
Classes/Unit/: CameraMng.cpp  CameraMng.h  Character.cpp  Character.h  Enemy.cpp  Enemy.h  Player.cpp  Shot.cpp  Shot.h  charaStruct.h
Classes/_DebugOut/: _DebugDispOut.cpp
Resources/: map.tmx  tileSet.tsx
Resources/Audio/: cktoolメモ.txt
Resources/Audio/BGM/: BGM.ckbx  gameoverBGM.cks  titleBGM.cks
Resources/Audio/SE/: Sound.ckb  Sound.ckbx
Resources/Image/: logo.xcf  読み込み上の注意.txt
Resources/Image/UI/counter/: number.plist
Resources/effect/: death.efk
Resources/mapdata/: shootingMap.tmx  shootingTileSets.tsx
proj.win32/: shootingProject.sln  shootingProject.vcxproj  shootingProject.vcxproj.filters
